[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Level/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Interface/HealthBar3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Interface/Health.tscn" type="PackedScene" id=3]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.913725, 0.337255, 0.109804, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SphereShape" id=4]
radius = 7.0

[sub_resource type="SphereShape" id=5]

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.268678, 0 )
script = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="Eyes" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="Eyes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.451931, 0 )
enabled = true
cast_to = Vector3( 0, 0, -7 )
collide_with_areas = true

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.010677, -0.008461, -0.000565767 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Body"]
transform = Transform( 0.16518, 0, 0, 0, 0.251425, 0, 0, 0, 0.113375, -0.010677, 0.008461, -1.01202 )
mesh = SubResource( 3 )
material/0 = null

[node name="HealthBar3D" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54572, 0 )

[node name="Vision" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Vision"]
shape = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )
[connection signal="area_entered" from="Vision" to="." method="_on_Vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_Vision_area_exited"]
